k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muffin-wallet-deployment
  namespace: aksum
spec:
  replicas: 3
  selector:
    matchLabels:
      app: muffin-wallet
  template:
    metadata:
      labels:
        app: muffin-wallet
    spec:
      containers:
        - name: muffin-wallet
          image: aksumshevkevich/muffin-wallet:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
