k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: muffin-wallet-pod
  namespace: aksum
  labels:
    app: muffin-wallet
spec:
  containers:
    - name: muffin-wallet
      image: aksumshevkevich/muffin-wallet:lates
      imagePullPolice: IfNotPresent
      ports:
        - containerPort: 8080
