k8s/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  namespace: aksum
  labels:
    app: postgres
spec:
  containers:
    - name: postgres
      image: postgres:16-alpine
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
  volumes:
    - name: postgres-storage
      PersistentVolumeClaim:
        claimName: postgres-pvc
