k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: muffin-wallet-service
  namespace: aksum
spec:
  type: ClusterIP
  selector:
    app: muffin-wallet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
