k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muffin-wallet-ingress
  namespace: aksum
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - muffin.local
      secretName: muffin-wallet.tls
  rules:
    - host: muffin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: muffin-wallet-service
                port:
                  number: 80
